# QML_Fluent_i18n_Example

./: .gitignore  CMakeLists.txt  README.md  config.h.in
conf/: config.json
include/: appInfo.h  config.h  localization.h  util.h
qml/: App.qml
qml/components/: Footer.qml  Sidebar.qml  qmldir
qml/views/: V_Demo.qml  V_Home.qml  V_Settings.qml
qml/window/: About.qml  MainWindow.qml
src/: appInfo.cpp  localization.cpp  main.cpp  util.cpp
translations/: lang_en.ts  lang_en_US.ts  lang_zh.ts  lang_zh_CN.ts
tutorial/: Tutorial.md  Tutorial_zh_CN.md
